# project_second

./: .gitignore  Dockerfile  README.md  create_tables.py  docker-compose.yml  pyproject.toml  seed_package_types.py
src/: config.py  database.py  main.py  models.py  schemas.py  tasks.py  utils.py
src/routes/: package_types.py  packages.py
templates/: index.html
tests/: conftest.py  test_app.py
